fix scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 
 }
 
@@ -25,7 +26,17 @@ a{
   text-decoration: none;
 }
 ::-webkit-scrollbar{
-  display: none;
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 .danger {
   background-color: #E57373 !important;
@@ -41,7 +52,7 @@ a{
 
 .app__container{
   height: 100vh;
-  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .bar {
@@ -101,10 +112,6 @@ a{
   border: none !important; 
 }
 
-.add-feed__container{
-  overflow: scroll;
-}
-
 .draggable__container{
   z-index: 99;
 }
@@ -134,7 +141,6 @@ a{
   justify-content: center;
   flex-wrap: wrap;
   height: 80%;
-  overflow: scroll;
 }
 
 
@@ -161,7 +167,7 @@ a{
   display:flex;
   flex-direction: column;
   height: 350px;
-  margin: 16px;
+  margin: 8px;
   width: 350px;
 }
 .card__container:hover {
@@ -183,7 +189,6 @@ a{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  overflow: hidden;
 }
 
 .action-buttons__container{
@@ -197,14 +202,9 @@ a{
 }
 .external{
   border-top: dotted thick black;
-  /* position: relative; */
-  /* height: 80vh; */
   margin: 12px;
-  overflow: scroll;
   padding: 24px;
-  /* left:100px; */
   z-index: -99;
-  /* overflow: visible; */
 }
 .form2Head{
   cursor: move;
@@ -270,8 +270,6 @@ button{
   height:300px;
   top: 3rem;
   margin-left:20px;
-  /* left:50vw;
-  margin-left:-250px; */
   z-index: 9999;
   background-color: rgba(243, 243, 243, 0.897);
 }
@@ -281,4 +279,5 @@ button{
 .formContent{
   margin-top:2rem;
   overflow: scroll;
+  overflow-x: hidden;
 }
